--- a/EscalArt/templates/escalArt/publicacionHome.html
+++ b/EscalArt/templates/escalArt/publicacionHome.html
@@ -27,82 +27,8 @@
 </head>
 
 <body>
-    {% include 'escalArt/includes/menu.html' %}
+    {% include 'escalArt/index.html' %}
 
-
-    <!-- slider -->
-    <section class="seccion-slider">
-        <div id="contenedor-slider" class="contenedor-slider">
-            <div id="slider" class="slider">
-                <section class="slider__section"><img class="Slide" src="{% static 'escalArt/img/1.jpg' %}"></section>
-                <section class="slider__section"><img class="Slide" src="{% static 'escalArt/img/2.jpg' %}"></section>
-                <section class="slider__section"><img class="Slide" src="{% static 'escalArt/img/3.jpg' %}"></section>
-                <section class="slider__section"><img class="Slide" src="{% static 'escalArt/img/Artista.jpg' %}"></section>
-            </div>
-            <div id="btn-prev" class="btn-prev">&#60;</div>
-            <div id="btn-next" class="btn-next">&#62;</div>
-        </div>
-    </section>
-
-    <div class="scrol"></div>
-
-
-    <h1 class="titulo">Lo mas visto!</h1>
-    <section class="section-chips">
-        <div class="chips-container">
-            <span class="chips">Categoria 1</span>
-            <span class="chips">Categoria 2</span>
-            <span class="chips">Categoria 3</span>
-            <span class="chips">Categoria </span>
-        </div>
-    </section>
-
-    <section class="galeria">
-        {% for p in posts|shuffle %}
-        <!--  -->
-        <article class="post ">
-
-            <div class="post-body ">
-                <div class="post-container">
-                    <a class="column" href="{% url 'perfil' p.idUser.username %}">
-                        {% if p.idUser.imagen %}
-                        <img id="foto-perfil" src="/{{ p.idUser.imagen}}" alt="Galeria de imagenes">
-                            {%else%}
-                            <img src="{% static 'EscalArt/img/perfil.jpg' %}" id="foto-perfil" alt="">
-                        {% endif %}
-                    </a>
-                    <a class="column" href="{% url 'perfil' p.idUser.username %}">
-                        <h3 class="username">{{p.idUser.username}}</h3>
-                    </a>
-                    <h2 class="titulo-post column">{{p.titulo}}</h2>
-
-                </div>
-                <span class="linea_2"></span>
-                <P class="descripcion-post " id="descripcion-post">{{p.descripcion}}</P>
-                <div>
-                    <span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span>
-                    <span class="post-likes column" id="cant-likes">{{p.cantLikes.all.count}}</span>
-
-                </div>
-            </div>
-            <div class="post-header ">
-                <a href="#" name="idPost" id="idPost">
-                    <img id="post-imagen" src="/{{ p.imagen }}" alt="Galeria de imagenes">
-                </a>
-            </div>
-        </article>
-
-
-
-
-        <!--  -->
-        {% endfor %}
-
-
-
-
-
-    </section>
 
     <!--Ver Publicacion-->
 
@@ -271,9 +197,6 @@
     <!--  -->
 
 
-    <a href="{% url 'ayudacliente' %}">Ayuda Cliente</a> {% if user.is_authenticated %}
-    <h1>Username: {{user.username}}</h1>
-    <h1>Tipo Usuario: {{user.tipoCuenta.tipoCuenta}}</h1>
 
 
 
@@ -282,9 +205,8 @@
 
 
 
-    <a href="{% url 'logout' %}">Cerrar sesion</a> {% else %}
-    <a href="{% url 'login' %}">Inicia sesion</a> |
-    <a href="{% url 'registro' %}">Registrate</a> {% endif %} {% include 'escalArt/includes/footer.html' %}
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
