--- a/EscalArt/static/escalArt/css/perfil_cliente.css
+++ b/EscalArt/static/escalArt/css/perfil_cliente.css
@@ -39,10 +39,9 @@
         flex-direction: column;
         align-items: center;
     }
-    
-    .seccion-perfil-usuario {
+    /* .seccion-perfil-usuario {
         margin-top: -100px;
-    }
+    } */
     
     .seccion-perfil-usuario .perfil-usuario-header {
         width: 100%;
