--- a/EscalArt/templates/escalArt/Chats.html
+++ b/EscalArt/templates/escalArt/Chats.html
@@ -28,7 +28,6 @@
     {% include 'escalArt/includes/menu.html' %}
 
     <div class="scrol"></div>
-    What chat room would you like to enter?<br>
 
 
 
@@ -49,11 +48,17 @@
             </div>
             <div class="seccion-lista-usuarios">
                 {% for s in sol %}
+                <!--  -->
+                {% if user.username == s.usernameArtista %}
+                <!--  -->
+                {% for c in cli %}
+                <!--  -->
+                {% if s.usernameArtista == user.username and c.username == s.idCliente.username %}
+
                 <div class="usuario" onclick="chat('{{s.idSolicitud}}');" id="{{s.idSolicitud}}-submit">
-                    <!--  -->
 
                     <!--  -->
-                    {% if user.username == s.usernameArtista or user == s.idCliente %}
+
                     <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.usernameArtista}}{{s.idCliente}}" hidden><br>
 
                     <div class="avatar">
@@ -62,19 +67,11 @@
                     </div>
                     <div class="cuerpo">
 
-                        {% if user == s.idCliente %}
-                        <span><input style="background-color:transparent; border:none;box-shadow:none;" onclick="chat('{{s.idSolicitud}}');" id="{{s.idSolicitud}}-submit"  type="button" value="{{s.usernameArtista}}"></span>
 
-                        <span class="username-block"> @{{s.usernameArtista}}</span>
-                        <!--  -->
-                        {% endif %}
-                        <!--  -->
-                        {% if user.username == s.usernameArtista %}
-                        <span><input style="background-color:transparent; border:none;box-shadow:none;" onclick="chat('{{s.idSolicitud}}');" id="{{s.idSolicitud}}-submit"  type="button" value="{{s.idCliente.username}}"></span>
+                        <span><input style="background-color:transparent; border:none;box-shadow:none;" onclick="chat('{{s.idSolicitud}}');" id="{{s.idSolicitud}}-submit"  type="button" value="{{s.idCliente.nombre}} (cliente)"></span>
 
                         <span class="username-block"> @{{s.idCliente.username}}</span>
-                        <!--  -->
-                        {% endif %}
+
 
 
                         <span>detalles de mensaje</span>
@@ -83,16 +80,73 @@
                         3
                     </span>
 
+
+
+
+
+                </div>
+                {%endif%}
+                <!--  -->
+                {% endfor %}
+                <!--  -->
+                {% else %}
+                <!--  -->
+                {% for c in cli %}
+                <!--  -->
+                {% if s.idCliente == user and c.username == s.idCliente.username %}
+                <div class="usuario" onclick="chat('{{s.idSolicitud}}');" id="{{s.idSolicitud}}-submit">
+
                     <!--  -->
-                    {% endif %}
+
+                    <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.usernameArtista}}{{s.idCliente}}" hidden><br>
+
+                    <div class="avatar">
+                        <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
+                        <span class="estado-usuario enlinea"></span>
+                    </div>
+                    <div class="cuerpo">
+
+                        {% for a in cli %}
+                        <!--  -->
+                        <!--  -->
+                        {% if s.usernameArtista == a.username %}
+                        <span><input style="background-color:transparent; border:none;box-shadow:none;" onclick="chat('{{s.idSolicitud}}');" id="{{s.idSolicitud}}-submit"  type="button" value="{{a.nombre}}"></span>
+                        <!--  -->
+                        {% endif %}
+                        <!--  -->
+                        {% endfor %}
+
+
+
+
+                        <span class="username-block"> @{{s.usernameArtista}}</span>
+
+
+
+                        <span>detalles de mensaje</span>
+                    </div>
+                    <span class="notificacion">
+                        3
+                    </span>
+
+
 
 
 
                 </div>
                 <!--  -->
+                {%endif%}
+                <!--  -->
+                {% endfor %}
+
+                <!--  -->
+                {%endif%}
+
+                <!--  -->
                 {% endfor %}
             </div>
         </div>
+        {%block content%}
         <div class="seccion-chat">
             <div class="usuario-seleccionado">
                 <div class="avatar">
@@ -189,26 +243,13 @@
                 </form>
             </div>
         </div>
+        {% endblock %}
     </section>
 
     <!--Pie de la pagina-->
     {% include 'escalArt/includes/footer.html' %}
 
-    <script>
-        function chat(solicitud) {
-            document.querySelector(`#${solicitud}-input`).focus();
-            document.querySelector(`#${solicitud}-input`).onkeyup = function(e) {
-                if (e.keyCode === 13) { // enter, return
-                    document.querySelector(`#${solicitud}-submit`).click();
-                }
-            };
-
-            document.querySelector(`#${solicitud}-submit`).onclick = function(e) {
-                var roomName = document.querySelector(`#${solicitud}-input`).value;
-                window.location.pathname = '/chat/' + roomName + '/';
-            };
-        }
-    </script>
+    <script src="{% static 'EscalArt/js/chat.js' %}"></script>
     <script type="text/javascript" src="{% static 'EscalArt/js/menu.js' %}"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
