--- a/EscalArt/templates/escalArt/pruebaRoom.html
+++ b/EscalArt/templates/escalArt/pruebaRoom.html
@@ -1,50 +1,36 @@
-<html>
+{% extends 'escalArt/Chats.html' %} {% load static %} {% block content %}
+<div class="seccion-chat">
+    <div id="chat-log" class="panel-chat">
 
-<head>
-    <meta charset="utf-8" />
-    <title>Chat Room</title>
-</head>
 
-<body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send"> {{ room_name|json_script:"room-name" }}
-    <script>
-        const roomName = JSON.parse(document.getElementById('room-name').textContent);
+    </div>
 
-        const chatSocket = new WebSocket(
-            'ws://' +
-            window.location.host +
-            '/ws/chat/' +
-            roomName +
-            '/'
-        );
 
-        chatSocket.onmessage = function(e) {
-            const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n');
-        };
+    <div class="panel-escritura">
+        <div class="textarea">
+            <div class="opcines">
+                <button type="button">
+                    <i class="fas fa-file"></i>
+                    <label for="file"></label>
+                    <input type="file" id="file">
+                </button>
+                <button type="button">
+                    <i class="far fa-image"></i>
+                    <label for="img"></label>
+                    <input type="file" id="img">
+                </button>
+            </div>
+            <textarea id="chat-message-input" type="text" size="100"></textarea>
+            <button id="chat-message-submit" type="button" class="enviar" value="Send">
+                <i class="fas fa-paper-plane"></i>
+            </button> {{ room_name|json_script:"room-name" }}
+        </div>
 
-        chatSocket.onclose = function(e) {
-            console.error('Chat socket closed unexpectedly');
-        };
+    </div>
 
-        document.querySelector('#chat-message-input').focus();
-        document.querySelector('#chat-message-input').onkeyup = function(e) {
-            if (e.keyCode === 13) { // enter, return
-                document.querySelector('#chat-message-submit').click();
-            }
-        };
+</div>
 
-        document.querySelector('#chat-message-submit').onclick = function(e) {
-            const messageInputDom = document.querySelector('#chat-message-input');
-            const message = messageInputDom.value;
-            chatSocket.send(JSON.stringify({
-                'message': message
-            }));
-            messageInputDom.value = '';
-        };
-    </script>
-</body>
 
-</html>
+
+<script src="{% static 'EscalArt/js/room.js' %}"></script>
+{% endblock %}
