--- a/EscalArt/templates/registration/cambiar_pass.html
+++ b/EscalArt/templates/registration/cambiar_pass.html
@@ -10,7 +10,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/login.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/cambiar_pass.css' %}">
     <link type="text/css" rel="stylesheet" href="{% static 'EscalArt/css/Menu-Fotter.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
@@ -41,15 +41,25 @@
     <div class="container-login">
         <div class="container__form">
             <img src="{% static 'EscalArt/img/candado.png' %}" alt="IMG Candado">
-            <h2>Iniciar Sesion</h2>
+            <h2>Cambiar Contraseña</h2>
             <form action="" method="POST">
-                {% csrf_token %} {{ form | crispy}}
+                <p>
+                    <label>Contraseña Actual</label>
+                    <input type="password"></input>
+                </p>
+                <p>
+                    <label>Nueva contraseña</label>
+                    <input type="password"></input>
+                </p>
+                <p>
+                    <label>Confirmar contraseña</label>
+                    <input type="password"></input>
+                </p>
                 <input class="check" type="checkbox" id="checkid">
                 <label for="checkid">Recuerdame</label>
-                <a href="#">¿Olvidaste tu contraseña?</a>
-
+                <a href="{% url 'login' %}">¿Ya tienes una cuenta?</a>
                 <div class="btn-guardar">
-                    <input class="boton-form" type="submit" value="Iniciar Sesion">
+                    <input class="boton-form" type="submit" value="Guardar Cambios">
                 </div>
                 <div class="direc-cuenta">
                     <a href="#">¿No tienes cuenta?<span>Crear</span></a>
