--- a/EscalArt/templates/escalArt/Chats.html
+++ b/EscalArt/templates/escalArt/Chats.html
@@ -59,7 +59,7 @@
 
                     <!--  -->
 
-                    <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.usernameArtista}}{{s.idCliente}}" hidden><br>
+                    <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.idSolicitud}}" hidden><br>
 
                     <div class="avatar">
                         <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
@@ -98,7 +98,7 @@
 
                     <!--  -->
 
-                    <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.usernameArtista}}{{s.idCliente}}" hidden><br>
+                    <input id="{{s.idSolicitud}}-input" type="text" size="100" value="{{s.idSolicitud}}" hidden><br>
 
                     <div class="avatar">
                         <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt="img">
